# myPhysicsCalculation

./: README.md
electronInElectromagneticField/: CMakeLists.txt
electronInElectromagneticField/include/BasicMassageOfElectronInElectromagneticField/: BasicMassageOfElectronInElectromagneticField.h
electronInElectromagneticField/include/ElectronTrajectoryByAnalysisInATimeSlice/: ElectronTrajectoryByAnalysisInATimeSlice.h
electronInElectromagneticField/include/NumericalCalculateOfRadiation/: NumericalCalculateOfRadiation.h
electronInElectromagneticField/include/NumericalSolveElectromagneticFieldWithInitPositionAndInitMomentum/: NumericalSolveElectromagneticFieldWithInitPositionAndInitMomentum.h
electronInElectromagneticField/src/BasicMassageOfElectronInElectromagneticField/: BasicMassageOfElectronInElectromagneticField.cpp
electronInElectromagneticField/src/ElectronTrajectoryByAnalysisInATimeSlice/: ElectronTrajectoryByAnalysisInATimeSlice.cpp
electronInElectromagneticField/src/NumericalSolveElectromagneticFieldWithInitPositionAndInitMomentum/: NumericalSolveElectromagneticFieldWithInitPositionAndInitMomentum.cpp
package/: CMakeLists.txt
package/include/ElectronBase/: ElectronBase.h
package/include/LaserField/: LaserField.h
package/include/LorentzVector/: LorentzVector.h
package/include/NumericalSolveOfMotionEquationBase/: NumericalSolveOfMotionEquationBase.h
package/include/NumericalSolveOfMotionEquationWithInitPositionAndInitMomentum/: NumericalSolveOfMotionEquationWithInitPositionAndInitMomentum.h
package/include/Particle/: Particle.h
package/include/ParticleState/: ParticleState.h
package/include/RadiationBase/: RadiationBase.h
package/include/Spin/: Spin.h
package/src/Dimension3Vector/: Dimension3Vector.cpp
package/src/ElectronBase/: ElectronBase.cpp
package/src/LaserField/: LaserField.cpp
package/src/LorentzVector/: LorentzVector.cpp
package/src/NumericalSolveOfMotionEquationBase/: NumericalSolveOfMotionEquationBase.tpp
package/src/NumericalSolveOfMotionEquationWithInitPositionAndInitMomentum/: NumericalSolveOfMotionEquationWithInitPositionAndInitMomentum.cpp
package/src/Particle/: Particle.cpp
package/src/ParticleState/: ParticleState.cpp
package/src/RadiationBase/: RadiationBase.cpp
package/src/Spin/: Spin.cpp
test/: CMakeLists.txt  a.out  test.cpp
test2/: test.cpp
